--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@faker-js/faker": "^8.4.1",
     "android-platform-tools": "^3.0.2",
     "appium": "^2.5.4",
+    "assert": "^2.1.0",
     "chai": "^5.1.0",
     "kraken-node": "^1.0.24"
   }
