--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "android-platform-tools": "^3.0.2",
     "appium": "^2.5.4",
     "assert": "^2.1.0",
-    "chai": "^5.1.0",
+    "chai": "4.4.1",
     "kraken-node": "^1.0.24"
   }
 }
