Ajustes en organización de carpetas Scripts

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ screenshots
 screenshots/
 /BackStopJS/backstop_data/bitmaps_reference/
 results/
+html_report/
+html_report
+backstop_data/html_report/
+backstop_data/html_report
