--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,5 @@ screenshots
 screenshots/
 /BackStopJS/backstop_data/bitmaps_reference/
 results/
-html_report/
 html_report
-backstop_data/html_report/
-backstop_data/html_report
+bitmaps_test
